--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -9,5 +9,6 @@ jobs:
         with:
           node-version: '14'
       - run: npm install -g bats
+      - run: apt install httpd
       - run: bats -v
 
