--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -12,3 +12,17 @@ jobs:
       - run: sudo apt install apache2
       - run: bats -v
 
+name: learn-github-actions-CentOS
+on: [push]
+jobs:
+  check-bats-version:
+    run-on: fedora:latest 
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - run: npm install -g bats
+      - run: yum install httpd
+      - run: bats -v
+
