--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,3 +11,9 @@ jobs:
       - run: npm install -g bats
       - run: sudo apt install apache2
       - run: bats -v
+   job Test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: scripts 
